project.css
@import url('main.css');

.no-scroll{
    overflow: hidden;
}

img[x-zoom]{
    width: 100%;
    cursor: zoom-in;
}

.image-display{
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    background: rgba(0, 0, 0, 0.9);
    z-index: 99999;
    cursor: zoom-out;
}

.image-display img{
    height: 100%;
    width: 100%;
    object-fit: contain;
}

.image-display>i{
    position: absolute;
    top: 1em;
    right: 1em;
    padding: 2em;
    cursor: pointer;
    font-size: 0.6em;
}
.image-display>i::before{
    content: '';
    position: absolute;
    bottom: 1.75em;
    top: 1.75em;
    left: 0.5em;
    right: 0.5em;
    background: var(--white);
    transform: rotate(45deg);
    z-index: 2;
}
.image-display>i::after{
    content: '';
    position: absolute;
    bottom: 1.75em;
    top: 1.75em;
    left: 0.5em;
    right: 0.5em;
    background: var(--white);
    transform: rotate(-45deg);
}
.image-display>i>i::before{
    content: '';
    position: absolute;
    bottom: 1.75em;
    top: 1.75em;
    left: 0.5em;
    right: 0.5em;
    box-shadow: 0 0 0.4em rgba(0, 0, 0, 0.9);
    transform: rotate(45deg);
}
.image-display>i>i::after{
    content: '';
    position: absolute;
    bottom: 1.75em;
    top: 1.75em;
    left: 0.5em;
    right: 0.5em;
    box-shadow: 0 0 0.4em rgba(0, 0, 0, 0.9);
    transform: rotate(-45deg);
}

.arrow{
    position: absolute;
    top: calc(50% - 1.25em);
    cursor: pointer;
    padding: 2em;

    --arrow-thickness: 0.5em;
    --arrow-offset: 1em;
}
.arrow[valid="false"]{
    opacity: 0.1;
    cursor: default;
}
.arrow::before{
    content: '';
    position: absolute;
    bottom: var(--arrow-offset);
    left: var(--arrow-offset);
    right: var(--arrow-offset);
    height: var(--arrow-thickness);
    background: var(--white);
    z-index: 2;
}
.arrow::after{
    content: '';
    position: absolute;
    bottom: var(--arrow-offset);
    right: var(--arrow-offset);
    top: var(--arrow-offset);
    width: var(--arrow-thickness);
    background: var(--white);
}
.arrow>i::before{
    content: '';
    position: absolute;
    bottom: var(--arrow-offset);
    left: var(--arrow-offset);
    right: var(--arrow-offset);
    height: var(--arrow-thickness);
    box-shadow: 0 0 0.4em rgba(0, 0, 0, 0.9);
}
.arrow>i::after{
    content: '';
    position: absolute;
    bottom: var(--arrow-offset);
    right: var(--arrow-offset);
    top: var(--arrow-offset);
    width: var(--arrow-thickness);
    box-shadow: 0 0 0.4em rgba(0, 0, 0, 0.9);
}
.arrow[left]{
    left: 1em;
    transform: rotate(135deg);
}
.arrow[right]{
    right: 1.5em;
    transform: rotate(-45deg);
}

